# rust-game-2048

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  style.css
.cargo/: config.toml
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-07-15-rust-game-2048.md
docs/superpowers/specs/: 2026-07-15-rust-game-2048-design.md
src/: app.rs  difficulty.rs  input.rs  main.rs  progress.rs  reddit.rs  storage.rs  subreddits.rs
src/components/: board_view.rs  chrome.rs  difficulty_bar.rs  gallery.rs  header.rs  image_panel.rs  lightbox.rs  media_view.rs  mod.rs  overlay.rs  reveal_bg.rs  subreddit_bar.rs  top_bar.rs
src/game/: board.rs  mod.rs  move_logic.rs
src/reddit/: mod.rs  net.rs  normalize.rs  parse.rs  types.rs
