[package]
name = "rust-game-2048"
version = "0.1.0"
edition = "2021"
description = "Classic 2048 in Rust + Leptos, for GitHub Pages"
license = "MIT"
repository = "https://github.com/sn99/rust-game-2048"
readme = "README.md"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
fastrand = "2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Document",
    "Element",
    "HtmlElement",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomRect",
    "KeyboardEvent",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# unused for pure CSR trunk setup; kept for clarity
