[package]
name = "rust-game-2048"
version = "0.1.0"
edition = "2021"
description = "Classic 2048 in Rust + Leptos, for GitHub Pages"
license = "MIT"
repository = "https://github.com/sn99/rust-game-2048"
readme = "README.md"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
fastrand = "2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Storage",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomRect",
    "KeyboardEvent",
    "EventTarget",
    "HtmlVideoElement",
    "HtmlMediaElement",
    "HtmlImageElement",
    "RequestCredentials",
    "RequestMode",
    "RequestInit",
    "Headers",
    "Request",
    "Response",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
